# driad

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
assets/: Credits.md
driad-common/: Cargo.toml
driad-common/src/: lib.rs
driad-core/: Cargo.toml
driad-core/src/: char.rs  color.rs  font.rs  lib.rs  plugin.rs  widget.rs
driad-server/: Cargo.toml
driad-server/src/: main.rs
plugins/other/: metadata.toml
plugins/test/: main.lua  metadata.toml
src/: char.rs  color.rs  font.rs  lib.rs  main.rs  plugin.rs
