[workspace]
members = ["driad-core"]
resolver = "2"

[workspace.package]
authors = ["Fae"]
edition = "2024"
version = "0.1.0"

[package]
name = "driad"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sdl3.workspace = true
log.workspace = true
simplelog.workspace = true

driad-core = { path = "./driad-core" }

[workspace.dependencies]
# Rendering
sdl3 = { version = "0.17.3", features = ["unsafe_textures"] }

# Errors
thiserror = { version = "2.0.18", features = [] }

# Embedded Lua
mlua = { version = "0.11.6", features = ["lua54", "macros", "send"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = [] }
image = { version = "0.25.9", features = [] }

log = { version = "0.4.29" }
simplelog = { version = "0.12.2" }
