[workspace]
members = ["driad-common", "driad-core", "driad-server"]
resolver = "2"

[workspace.package]
authors = ["Fae"]
edition = "2024"
version = "0.1.0"

[package]
name = "driad"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sdl3.workspace = true
log.workspace = true
simplelog.workspace = true
hecs.workspace = true

driad-core = { path = "./driad-core" }

[lints]
workspace = true

[workspace.dependencies]
# Rendering
sdl3 = { version = "0.17.3", features = ["unsafe_textures"] }

# Errors
thiserror = { version = "2.0.18", features = [] }

# Embedded Lua
mlua = { version = "0.11.6", features = ["lua54", "macros", "send"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = [] }
image = { version = "0.25.9", features = [] }
serde_bytes = { version = "0.11.19" }
rmp-serde = { version = "1.3.1" }

# Logging Utils
log = { version = "0.4.29" }
simplelog = { version = "0.12.2" }

# Entity Component Sytem Framework
hecs = { version = "0.11.0" }

uuid = { version = "1.22.0", features = ["serde", "v4"] }

# Async
tokio = { version = "1.50.0", features = ["full"] }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = { level = "deny", priority = 1 }
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
as_underscore = "warn"
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
bool_to_int_with_if = "warn"
large_stack_frames = "warn"
missing_const_for_fn = "deny"
